--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 gunicorn>=19.7.1
 plotly>=2.0.9
-dash==0.17.4
-dash-renderer==0.7.2
-dash-html-components==0.6.0
-dash-core-components==0.5.0
+dash==1.11.0
+dash-renderer==1.4.0
+dash-html-components==1.0.3
+dash-core-components==1.9.1
+dash-bootstraps-components==0.9.2
